algoritmos de grafos y dijkstra, prim y kruskal funcionando